[package]
name = "yt-playlist-downloader"
version = "0.1.0"
authors = ["Jonathan Fok kan <jfokkan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-youtube3 = "2.0.4"
hyper = "^0.14"
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"
tokio = { version = "1.7.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2.0", features = ["env-filter"] }
tracing-futures = "0.2.5"
regex = "1"
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"
walkdir = "2"
reqwest = { version = "0.11", features = ["json"] }
